--- a/src/Pages/Admin/AddItem/AddItem.css
+++ b/src/Pages/Admin/AddItem/AddItem.css
@@ -1,32 +1,18 @@
-.Add-itemForm {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 5px 20px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
-  width: 100%;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+.Add-itemForm input {
+  margin: 10px;
 }
 
-.Add-itemForm input {
-  font-size: 20px;
-  padding: 10px;
+.Add-itemForm button {
+  background: #1f38a7;
   border: none;
-  background: white;
-  display: block;
-  border-radius: 5px;
-  font-weight: 600;
-  color: rgba(0, 0, 0, 0.616);
-  width: 300px;
+  padding: 10px 25px;
+  font-size: 18px;
+  color: white;
 }
 
 .add-item-area {
   border-radius: 5px;
-  background: darkmagenta;
+  background: #15224b;
   padding: 20px;
 }
 /*# sourceMappingURL=AddItem.css.map */
